--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,9 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemingProvider />
+<MudThemeProvider IsDarkMode="true" />
+<MudSnackbarProvider  />
+<MudDialogProvider />
+
 <MudLayout>
     <MudAppBar Elevation="1">
-        <MudText Typo="Typo.h5" Class="ml-3">Application</MudText>
+        <MudText Typo="Typo.h5" Class="ml-3">KitchenStock</MudText>
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
         <NavMenu />
