--- a/Components/Pages/Dialogs/Stock/AddStockDialog.razor
+++ b/Components/Pages/Dialogs/Stock/AddStockDialog.razor
@@ -18,7 +18,7 @@
 
          <MudItem Style="margin-top: 10px">
                <MudText>Location</MudText>
-                <MudSelect @bind-Value="mStockModel.Location" Variant="Variant.Filled" T="LocationModel" Label="Location" AnchorOrigin="Origin.BottomCenter">
+                <MudSelect Disabled="@(mLocationModel != null)" @bind-Value="mStockModel.Location" Variant="Variant.Filled" T="LocationModel" Label="Location" AnchorOrigin="Origin.BottomCenter">
                     @foreach(var sLocation in MasterViewModel.Locations)
                     {
                         <MudSelectItem Value="@sLocation">@sLocation.Name</MudSelectItem>
