Rename MasterViewModel -> ViewModel
Add Overlay on MessageComponent when IsBusy is true

--- a/Components/Pages/Dialogs/LocationDialog.razor
+++ b/Components/Pages/Dialogs/LocationDialog.razor
@@ -1,4 +1,6 @@
-﻿<MudDialog>
+﻿<MessageComponent Errors="ViewModel.Errors" SuccessMessages="ViewModel.SuccessMessages" IsBusy="ViewModel.IsBusy"/>
+
+<MudDialog>
    <DialogContent>
       <MudItem Style="width: 500px">
          <MudItem>
