--- a/Components/Pages/Dialogs/ArticleDialog.razor
+++ b/Components/Pages/Dialogs/ArticleDialog.razor
@@ -1,4 +1,6 @@
-﻿<MudDialog>
+﻿<MessageComponent Errors="ViewModel.Errors" SuccessMessages="ViewModel.SuccessMessages" IsBusy="ViewModel.IsBusy" />
+
+<MudDialog>
     <DialogContent>
         <MudItem Style="width: 500px">
             <MudItem>
@@ -19,7 +21,7 @@
             <MudItem Style="margin-top: 10px">
                 <MudText>Categories</MudText>
                 <MudItem Style="max-height: 300px; overflow-y: auto">
-                    @foreach (var sCategory in MasterViewModel.Categories)
+                    @foreach (var sCategory in ViewModel.Categories)
                     {
                         @if (mCategoryIdAndAdded.ContainsKey(sCategory))
                         {
