--- a/Components/Pages/Dialogs/Stock/AddStockDialog.razor
+++ b/Components/Pages/Dialogs/Stock/AddStockDialog.razor
@@ -1,5 +1,7 @@
 ﻿@using Models
 
+<MessageComponent Errors="ViewModel.Errors" SuccessMessages="ViewModel.SuccessMessages" IsBusy="ViewModel.IsBusy" />
+
 <MudDialog>
    <DialogContent>
       <MudItem>
@@ -19,7 +21,7 @@
          <MudItem Style="margin-top: 10px">
                <MudText>Location</MudText>
                 <MudSelect Disabled="@(mLocationModel != null)" @bind-Value="mStockModel.Location" Variant="Variant.Filled" T="LocationModel" Label="Location" AnchorOrigin="Origin.BottomCenter">
-                    @foreach(var sLocation in MasterViewModel.Locations)
+                    @foreach(var sLocation in ViewModel.Locations)
                     {
                         <MudSelectItem Value="@sLocation">@sLocation.Name</MudSelectItem>
                     }
