--- a/Components/Pages/Articles.razor
+++ b/Components/Pages/Articles.razor
@@ -7,20 +7,25 @@
 
 <MudPaper Class="pa-4">
     <MudItem Class="d-flex justify-space-between">
-        <h1>Articles</h1>
+        <h1>Articles Sorted by Name</h1>
         <MudButton StartIcon="@Icons.Material.Filled.Add" Variant="Variant.Filled" Color="Color.Success" @onclick="() => AddOrEditArticle(new ArticleModel(), true)">Add New Article</MudButton>
     </MudItem>
 
     <MudItem Style="margin-top: 10px">
         <MudTable Items="@ViewModel.Articles" Hover="true" Breakpoint="Breakpoint.Sm">
+            <ToolBarContent>
+                <MudText Typo="Typo.h6">Articles</MudText>
+                <MudSpacer />
+                <MudTextField Immediate="true" @bind-Value="mSearchString" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+            </ToolBarContent>
             <HeaderContent>
-                <MudTh>Id</MudTh>
-                <MudTh>Name</MudTh>
-                <MudTh>Description</MudTh>
-                <MudTh>EAN</MudTh>
-                <MudTh>Categories</MudTh>
-                <MudTh>CreateDate</MudTh>
-                <MudTh>UpdateDate</MudTh>
+                <MudTh><MudTableSortLabel SortBy="new Func<ArticleModel, object>(x=>x.Id)">Id</MudTableSortLabel></MudTh>
+                <MudTh><MudTableSortLabel InitialDirection="SortDirection.Ascending" SortBy="new Func<ArticleModel, object>(x=>x.Name)">Name</MudTableSortLabel></MudTh>
+                <MudTh><MudTableSortLabel SortBy="new Func<ArticleModel, object>(x=>x.Description)">Description</MudTableSortLabel></MudTh>
+                <MudTh><MudTableSortLabel SortBy="new Func<ArticleModel, object>(x=>x.EAN)">EAN</MudTableSortLabel></MudTh>
+                <MudTh><MudTableSortLabel SortBy="new Func<ArticleModel, object>(x=>x.GetCategoryString())">Categories</MudTableSortLabel></MudTh>
+                <MudTh><MudTableSortLabel SortBy="new Func<ArticleModel, object>(x=>x.CreateDate)">CreateDate</MudTableSortLabel></MudTh>
+                <MudTh><MudTableSortLabel SortBy="new Func<ArticleModel, object>(x=>x.UpdateDate)">UpdateDate</MudTableSortLabel></MudTh>
                 <MudTh></MudTh>
             </HeaderContent>
             <RowTemplate>
@@ -35,6 +40,9 @@
                         <MudButton StartIcon="@Icons.Material.Filled.Edit" FullWidth="true" Variant="Variant.Filled" Color="Color.Warning" @onclick="async () => await AddOrEditArticle(context, false)">Edit</MudButton>
                     </MudTd>
                 </RowTemplate>
+                <PagerContent>
+                    <MudTablePager PageSizeOptions="new int[] { 10, 25, 50, 100 }" />
+                </PagerContent>
             </MudTable>
         </MudItem>
 </MudPaper>
