--- a/Components/Pages/Categories.razor
+++ b/Components/Pages/Categories.razor
@@ -7,18 +7,23 @@
 
 <MudPaper Class="pa-4">
     <MudItem Class="d-flex justify-space-between">
-        <h1>Categories</h1>
+        <h1>Categories Sorted by Name</h1>
         <MudButton StartIcon="@Icons.Material.Filled.Add" Variant="Variant.Filled" Color="Color.Success" @onclick="() => AddOrEditCategory(new CategoryModel(), true)">Add New Category</MudButton>
     </MudItem>
 
     <MudItem Style="margin-top: 10px">
-        <MudTable Items="@ViewModel.Categories" Hover="true" Breakpoint="Breakpoint.Sm">
+        <MudTable Dense="true" Striped="true" Filter="new Func<CategoryModel, bool>(FilterFunction1)" Items="@ViewModel.Categories" Hover="true" Breakpoint="Breakpoint.Sm">
+            <ToolBarContent>
+                <MudText Typo="Typo.h6">Categories</MudText>
+                <MudSpacer />
+                <MudTextField Immediate="true" @bind-Value="mSearchString" Placeholder="Search by Name or Desription" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+            </ToolBarContent>
             <HeaderContent>
-                <MudTh>Id</MudTh>
-                <MudTh>Name</MudTh>
-                <MudTh>Description</MudTh>
-                <MudTh>CreateDate</MudTh>
-                <MudTh>UpdateDate</MudTh>
+                <MudTh><MudTableSortLabel SortBy="new Func<CategoryModel, object>(x=>x.Id)">Id</MudTableSortLabel></MudTh>
+                <MudTh><MudTableSortLabel InitialDirection="SortDirection.Ascending" SortBy="new Func<CategoryModel, object>(x=>x.Name)">Name</MudTableSortLabel></MudTh>
+                <MudTh><MudTableSortLabel SortBy="new Func<CategoryModel, object>(x=>x.Description)">Description</MudTableSortLabel></MudTh>
+                <MudTh><MudTableSortLabel SortBy="new Func<CategoryModel, object>(x=>x.CreateDate)">CreateDate</MudTableSortLabel></MudTh>
+                <MudTh><MudTableSortLabel SortBy="new Func<CategoryModel, object>(x=>x.UpdateDate)">UpdateDate</MudTableSortLabel></MudTh>
                 <MudTh></MudTh>
             </HeaderContent>
             <RowTemplate>
@@ -31,6 +36,9 @@
                         <MudButton StartIcon="@Icons.Material.Filled.Edit" FullWidth="true" Variant="Variant.Filled" Color="Color.Warning" @onclick="async () => await AddOrEditCategory(context, false)">Edit</MudButton>
                     </MudTd>
                 </RowTemplate>
+                <PagerContent>
+                    <MudTablePager PageSizeOptions="new int[] { 10, 25, 50, 100 }" />
+                </PagerContent>
             </MudTable>
         </MudItem>
 </MudPaper>
