--- a/Components/App.razor
+++ b/Components/App.razor
@@ -11,7 +11,7 @@
     <link href="~/custom_css.css="stylesheet" />
 	
 	
-    <link rel="icon" type="image/png" href="favicon.ico" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet  />
 </head>
 
