--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -6,6 +6,7 @@
 
 <MudLayout>
     <MudAppBar Elevation="1">
+       <MudImage Height="24" Src="favicon.png"/>
         <MudText Typo="Typo.h5" Class="ml-3">KitchenStock</MudText>
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
