--- a/Components/Pages/Articles.razor
+++ b/Components/Pages/Articles.razor
@@ -6,13 +6,10 @@
 <MessageComponent Errors="ViewModel.Errors" SuccessMessages="ViewModel.SuccessMessages" IsBusy="ViewModel.IsBusy" />
 
 <MudPaper Class="pa-4">
-    <MudItem Class="d-flex justify-space-between">
-        <h1>Articles Sorted by Name</h1>
-        <MudButton StartIcon="@Icons.Material.Filled.Add" Variant="Variant.Filled" Color="Color.Success" @onclick="() => AddOrEditArticle(new ArticleModel(), true)">Add New Article</MudButton>
-    </MudItem>
+    <MudButton FullWidth="true" StartIcon="@Icons.Material.Filled.Add" Variant="Variant.Filled" Color="Color.Success" @onclick="() => AddOrEditArticle(new ArticleModel(), true)">Add New Article</MudButton>
 
     <MudItem Style="margin-top: 10px">
-        <MudTable Items="@ViewModel.Articles" Hover="true" Breakpoint="Breakpoint.Sm">
+        <MudTable Dense="true" Striped="true" Filter="new Func<ArticleModel, bool>(FilterFunction1)"  Items="@ViewModel.Articles" Hover="true" Breakpoint="Breakpoint.Sm">
             <ToolBarContent>
                 <MudText Typo="Typo.h6">Articles</MudText>
                 <MudSpacer />
