--- a/Components/Pages/Categories.razor
+++ b/Components/Pages/Categories.razor
@@ -6,10 +6,8 @@
 <MessageComponent Errors="ViewModel.Errors" SuccessMessages="ViewModel.SuccessMessages" IsBusy="ViewModel.IsBusy" />
 
 <MudPaper Class="pa-4">
-    <MudItem Class="d-flex justify-space-between">
-        <h1>Categories Sorted by Name</h1>
-        <MudButton StartIcon="@Icons.Material.Filled.Add" Variant="Variant.Filled" Color="Color.Success" @onclick="() => AddOrEditCategory(new CategoryModel(), true)">Add New Category</MudButton>
-    </MudItem>
+    <MudButton FullWidth="true" StartIcon="@Icons.Material.Filled.Add" Variant="Variant.Filled" Color="Color.Success" @onclick="() => AddOrEditCategory(new CategoryModel(), true)">Add New Category</MudButton>
+
 
     <MudItem Style="margin-top: 10px">
         <MudTable Dense="true" Striped="true" Filter="new Func<CategoryModel, bool>(FilterFunction1)" Items="@ViewModel.Categories" Hover="true" Breakpoint="Breakpoint.Sm">
