Add collapse navmenu button

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -6,6 +6,7 @@
 
 <MudLayout>
     <MudAppBar Elevation="1">
+        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
        <MudImage Height="24" Src="favicon.png"/>
         <MudText Typo="Typo.h5" Class="ml-3">KitchenStock</MudText>
     </MudAppBar>
