--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,28 +1,25 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider IsDarkMode="true" />
+<MudThemeProvider IsDarkMode="mDarkMode" />
 <MudSnackbarProvider  />
 <MudDialogProvider />
 
 <MudLayout>
     <MudAppBar Elevation="1">
-        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="DrawerToggle" />
        <MudImage Height="24" Src="favicon.png"/>
         <MudText Typo="Typo.h5" Class="ml-3">KitchenStock</MudText>
+        <MudSpacer/>
+        <MudItem Class="d-flex row align-center">
+           <MudIcon Style="margin-right: 5px" Icon="@Icons.Material.Filled.LightMode"/>
+            <MudSwitch @onchange="async (e) => await DarkModeToggle()" @bind-Value="mDarkMode" Color="Color.Primary" />
+            <MudIcon Style="margin-left: -15px" Icon="@Icons.Material.Filled.DarkMode" />
+        </MudItem>
     </MudAppBar>
-    <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
+    <MudDrawer @bind-Open="mDraweropen" ClipMode="DrawerClipMode.Always" Elevation="2">
         <NavMenu />
     </MudDrawer>
     <MudMainContent Class="mt-16 pa-4">
         @Body
     </MudMainContent>
 </MudLayout>
-
-@code {
-    private bool _drawerOpen = true;
-
-    private void DrawerToggle()
-    {
-        _drawerOpen = !_drawerOpen;
-    }
-}
