--- a/Components/Pages/StockAtLocation.razor
+++ b/Components/Pages/StockAtLocation.razor
@@ -1,5 +1,4 @@
-﻿@page "/location"
-@page "/location/{aLocationId}"
+﻿@page "/location/{aLocationId}"
 @using KitchenStock.Models
 
 <PageTitle>@(mLocationModel == null ? "" : mLocationModel.Name)</PageTitle>
