Add Models to Imports instead of using on each page.
Add Styling on BestBeforeDate depending on expiry date

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -12,7 +12,7 @@
         <MudSpacer/>
         <MudItem Class="d-flex row align-center">
            <MudIcon Style="margin-right: 5px" Icon="@Icons.Material.Filled.LightMode"/>
-            <MudSwitch @onchange="async (e) => await DarkModeToggle()" @bind-Value="mDarkMode" Color="Color.Primary" />
+            <MudSwitch @bind-Value="mDarkMode" Color="Color.Primary" />
             <MudIcon Style="margin-left: -15px" Icon="@Icons.Material.Filled.DarkMode" />
         </MudItem>
     </MudAppBar>
