--- a/Components/Pages/Dialogs/Stock/ShowStockListForIngredientDialog.razor
+++ b/Components/Pages/Dialogs/Stock/ShowStockListForIngredientDialog.razor
@@ -22,7 +22,7 @@
                         {
                            <tr>
                               <td>@sStock.Article.Name</td>
-                              <td>@sStock.PercentageLeft</td>
+                              <td>@sStock.PercentageLeft.ToString("0.00")</td>
                               <td>@sStock.Location.Name</td>
                               <td>@sStock.BestBeforeDate</td>
                            </tr>
