--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -6,7 +6,7 @@
             <MudNavLink Match="NavLinkMatch.Prefix" Href="@sLocation.GetLocationUrl()">@sLocation.Name</MudNavLink>
         }
     </MudNavGroup>
-    <MudNavLink Icon="@Icons.Material.Filled.ShoppingCart" Match="NavLinkMatch.Prefix" Href="shoppinglist">Shopping list</MudNavLink>
+    <MudNavLink Icon="@Icons.Material.Filled.ShoppingCart" Match="NavLinkMatch.Prefix" Href="shoppinglist">Shopping List</MudNavLink>
     <MudNavLink Icon="@Icons.Material.Filled.Receipt" Match="NavLinkMatch.Prefix" Href="recipes">Recipes</MudNavLink>
     <MudNavLink Icon="@Icons.Material.Filled.Lightbulb" Match="NavLinkMatch.Prefix" Href="suggestions">Suggestions</MudNavLink>
     <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Settings" Expanded="false">
