--- a/Components/Pages/Dialogs/Recipes/EditRecipeDialog.razor
+++ b/Components/Pages/Dialogs/Recipes/EditRecipeDialog.razor
@@ -55,7 +55,7 @@
                }
                else
                {
-                  <MudText>This recipe currently has no ingredients added! :(</MudText>
+                    <MudText Style="color: red;"><b>This recipe currently has no ingredients added!</b></MudText>
                }
          </MudItem>
 
